# simemb

./: .env.example  .gitignore  Dockerfile  README.md  app.py  generate_test_request.py  pyproject.toml  test_call.py
examples/: generate_test_request.py  generate_vl_request.py  test_call.py
src/: main.py  settings.py  test_call.py
src/core/: settings.py
src/embedding/: dependencies.py  router.py  schemas.py
src/ml/: loader.py  qwen3_embedding.py
src/models/: loader.py  qwen3_embedding.py
src/upload/: dependencies.py  router.py
